2008-05-30  Henry Proudhon  <henry.proudhon@ensmp.fr>

    * source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
    (ChartComposite): removed duplicate code.

2008-05-24  Henry Proudhon  <henry.proudhon@ensmp.fr>

    * source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
    (paintControl): Corrected the axis traces which were inverted,
    (chart): Fixed listener registered twice,
    (dispose): release the buffer image resources.
    * source/swt/org/jfree/experimental/swt/SWTGraphics2D.java
    (setTransform): use resource from pool if possible,
    (getSwtTransformFromPool): New method,
    (disposeResourcePool): dispose transform resources.

2008-04-18  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1943021 (Brian Cabana):
    * source/org/jfree/chart/plot/MultiplePiePlot.java
    (MultiplePiePlot(CategoryDataset)): Call setDataset() to ensure that
    plot registers as a dataset listener,
    * tests/org/jfree/chart/plot/junit/MultiplePiePlotTests.java
    (testConstructors): New test method.

2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/urls/CustomXYURLGenerator.java
    (clone): Implemented,
    * tests/org/jfree/chart/urls/junit/CustomPieURLGeneratorTests.java: 
    New file,
    * tests/org/jfree/chart/urls/junit/CustomXYURLGeneratorTests.java
    (testEquals): New test method,
    (testCloning): Likewise,
    * tests/org/jfree/chart/urls/junit/UrlsPackageTests.java
    (suite): Added CustomPieURLGeneratorTests.
    
2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/DeviationRenderer.java
    (findRangeBounds): New method override,
    * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
    (findRangeBounds): Likewise.

2008-04-10  David Gilbert  <david.gilbert@object-refinery.com> 

    * source/org/jfree/data/xy/XIntervalSeriesCollection.java
    (getStartXValue): New method override,