@@ -1,3 +1,14 @@
+2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
+
+    Bug 1977609:
+    * source/org/jfree/chart/util/SerialUtilities.java
+    (readShape): Handle SEG_CLOSE for GeneralPath,
+    * source/org/jfree/chart/util/ShapeUtilities.java
+    (equal(GeneralPath, GeneralPath)): Use correct path for comparison,
+    * tests/org/jfree/chart/util/junit/SerialUtilities.java: New file,
+    * tests/org/jfree/chart/util/junit/ShapeUtilities.java: Likewise,
+    * tests/org/jfree/chart/util/junit/UtilPackageTests.java: Include new tests.
+
 2008-05-30  Henry Proudhon  <henry.proudhon@ensmp.fr>
 
     * source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
